tests/ui/07-test-main.stderr
error: glob pattern is forbidden
 --> $DIR/07-test-main.rs:5:5
  |
5 |     *,
  |     ^

error: rename pattern is forbidden
 --> $DIR/07-test-main.rs:6:5
  |
6 |     foo as bar,
  |     ^^^^^^^^^^
