tests/ui/07-test-main.rs
rye::test_main! {
    a,
    b::c,
    {d, e, f},
    *,
    foo as bar,
}
